--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,14 @@ jobs:
       - run: gh pr list
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create comments
+        run: |
+          cat << EOF > comments
+          1st
+          2nd
+          3rd
+          EOF
+      - run: gh pr comment -F ./comments "${URL}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          URL: ${{ github.event.pull_request.html_url }}
