--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,16 @@ jobs:
           URL: ${{ github.event.pull_request.html_url }}
       - name: Edit PR comment
         uses: thollander/actions-comment-pull-request@v1
+        env:
+          URL: ${{ github.event.pull_request.html_url }}
         with:
-          message: 'Content loaded ! (edited)'
+          message: 'Content loaded ! (edited)Loading'
           comment_includes: 'Loading'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Edit PR comment
+        uses: thollander/actions-comment-pull-request@v1
+        env:
+          URL: ${{ github.event.pull_request.html_url }}
+        with:
+          message: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
