--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           cat << EOF > comments
           1st
-          2nd
+          ${{ github.event.pull_request.html_url }}
           3rd
           EOF
       - name: output orphaned dependencies
