--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,16 +22,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create comments
         run: |
-          VAR2=`js_dependency orphan -s src`
-          echo "VAR3=${VAR2}" >> $GITHUB_ENV
           cat << EOF > comments
           1st
-          ${{ github.event.pull_request.html_url }}
+          `js_dependency orphan -s src`
           3rd
           EOF
-      - name: output orphaned dependencies
-        run: |
-          js_dependency orphan -s src >  comments
+#      - name: output orphaned dependencies
+#        run: |
+#          js_dependency orphan -s src >  comments
       - run: gh pr comment -F ./comments "${URL}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
