--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
           1st
           `js_dependency orphan -s src`
           3rd
+          <!-- ${{ github.ref }} -->
           EOF
       - run: gh pr comment -F ./comments "${URL}"
         env:
@@ -44,7 +45,7 @@ jobs:
           body="$(cat comments)"
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
-          body="${body//$'\r'/'%0D'}" 
+          body="${body//$'\r'/'%0D'}"
           echo "::set-output name=body::$body"
       - name: Edit PR comment
         uses: thollander/actions-comment-pull-request@v1
@@ -52,4 +53,5 @@ jobs:
           URL: ${{ github.event.pull_request.html_url }}
         with:
           message: ${{ steps.get-comment-body.outputs.body }}
+          comment_includes: "<!-- ${{ github.ref }} -->"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
