--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,19 @@ jobs:
       - name: Create comments
         run: |
           cat << EOF > comments
-          ### orphaned dependencies
+          ## JsDependency Report
+
+          ### Orphaned dependencies
           `js_dependency orphan -s src`
+          
+          ### Targeted dependencies
+          \\\`\\\`\\\`mermaid
+          `js_dependency -s src -t src/pages/app.js -a @:./pages -c 3 -p 3`
+          \\\`\\\`\\\`
+          
+          ### Analyzed commit
           ${{ github.sha }}
+
           <!-- js_dependency_pull_request_comments_${{ github.ref }} -->
           EOF
 #      - run: gh pr comment -F ./comments "${URL}"
