--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@359bebbc29cbe6c87da6bc9ea3bc930432750108
         with:
-          ruby-version: '3.1' # Not needed with a .ruby-version file
+          ruby-version: '3.1'
       - run: gem install js_dependency
-#      - run: js_dependency orphan -s src
-#      - run: gh --version
-#      - run: gh pr list
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create comments
         run: |
           cat << EOF > comments
@@ -38,18 +33,6 @@ jobs:
 
           <!-- js_dependency_pull_request_comments_${{ github.ref }} -->
           EOF
-#      - run: gh pr comment -F ./comments "${URL}"
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          URL: ${{ github.event.pull_request.html_url }}
-      - name: Edit PR comment
-        uses: thollander/actions-comment-pull-request@v1
-        env:
-          URL: ${{ github.event.pull_request.html_url }}
-        with:
-          message: 'Content loaded ! (edited)Loading'
-          comment_includes: 'Loading'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - id: get-comment-body
         run: |
           body="$(cat comments)"
