--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - run: gem install js_dependency
       - name: Create comments
         run: |
-          cat << EOF > comments
+          cat << EOF > ${{ github.sha }}_comment
           `js_dependency export_markdown_report -s src -t src/pages/app.js -a @:./pages -c 3 -p 3 --identifier js_dependency_pull_request_comments_${{ github.ref }}`
           
           ### Analyzed commit
@@ -25,7 +25,7 @@ jobs:
           EOF
       - id: get-comment-body
         run: |
-          body="$(cat comments)"
+          body="$(cat ${{ github.sha }}_comment)"
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
