--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create comments
         env:
           SRC_PATH: src
-          TARGET_PATHS: src/pages/app.js
+          TARGET_PATHS: src/components/Button/index.js
         run: |
           cat << EOF > ${{ github.sha }}_comment
           `js_dependency export_markdown_report -s ${SRC_PATH} -t ${TARGET_PATHS} -a @:./pages -c 3 -p 3 --identifier js_dependency_pull_request_comments_${{ github.ref }}`
