not using TARGE_PATHS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Create report
         env:
           SRC_PATH: src
-          TARGET_PATHS: "${{ env.GIT_DIFF }}"
+#          TARGET_PATHS: "${{ env.GIT_DIFF }}"
           CHILD_ANALYZE_LEVEL: 2
           PARENT_ANALYZE_LEVEL: 2
           NAME_LEVEL: 2
@@ -29,7 +29,7 @@ jobs:
           EXCLUDE_OUTPUT_NAMES: "pages"
         run: |
           cat << EOF > ${{ github.sha }}_comment
-          `js_dependency export_markdown_report -s ${SRC_PATH} -t ${TARGET_PATHS} -a ${ALIAS_PATHS} -c ${CHILD_ANALYZE_LEVEL} -p ${PARENT_ANALYZE_LEVEL} --identifier ${IDENTIFIER} --exclude-output-names ${EXCLUDE_OUTPUT_NAMES}`
+          `js_dependency export_markdown_report -s ${SRC_PATH} -t ${{ env.GIT_DIFF }} -a ${ALIAS_PATHS} -c ${CHILD_ANALYZE_LEVEL} -p ${PARENT_ANALYZE_LEVEL} --identifier ${IDENTIFIER} --exclude-output-names ${EXCLUDE_OUTPUT_NAMES}`
           
           ### Analyzed commit
           ${{ github.sha }}
