--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
-name: js_dependency analysis
+name: Add js_dependency analysis report in pull request comment
 on:
-  workflow_dispatch:
   pull_request:
 
 jobs:
@@ -11,12 +10,12 @@ jobs:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v3
-      - uses: technote-space/get-diff-action@v6
-      - run: echo ${{ env.GIT_DIFF }}
       - uses: ruby/setup-ruby@359bebbc29cbe6c87da6bc9ea3bc930432750108
         with:
           ruby-version: '3.1'
       - run: gem install js_dependency
+      - uses: technote-space/get-diff-action@c747e3f4e5fe6ab4870031a8e33721e61914140c
+      - run: echo ${{ env.GIT_DIFF }}
       - name: Create report
         env:
           SRC_PATH: src
@@ -43,10 +42,9 @@ jobs:
           echo "::set-output name=body::$body"
         if: env.GIT_DIFF
       - name: Upsert JsDependency PR comment
-        uses: thollander/actions-comment-pull-request@v1
+        uses: thollander/actions-comment-pull-request@686ab1cab89e0f715a44a0d04b9fdfdd4f33d751
         with:
           message: ${{ steps.get-comment-body.outputs.body }}
           comment_includes: "<!-- js_dependency_pull_request_comments_${{ github.ref }} -->"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: env.GIT_DIFF
-
